Mon Aug 25 23:39:47 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKNew): add call to gtk_main_quit when dialog
	is destroyed.
	(reported by Joern Thyssen)

Mon Aug 25 23:26:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c: ensure that TOGGLE_GAMELIST and friends to not
	overlap with enum _gnubgcommand.

Mon Aug 25 20:53:03 GMT 2003  Jim Segrave jes@jes-2.dmeon.nl

	* gnubg.c = glibc putenv() doesn't copy strings 

Mon Aug 25 22:12:56 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): enlarge font used for
	market window.
	(reported by Massimiliano Maini)

Tue Aug 26 07:16:35 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c (SkillMenu): ignore skill "good" in gtk game.

Sun Aug 24 21:22:13 2003  Oystein Johansen  <oystein@gnubg.org>

	This is a big patch to integrate the GUI. There are still
	a couple of issues to be solved, but I'm commiting this, and hope
	someone can help out with the remaining issues. (See my post to the
	mailing list.

	* render.c, boardpos.c, gtkprefs.c, gtkboard.[ch]: Stretch the 2D board
	  to fit the screen better. The size is now 108 x 82.

	* gtkgame.[ch]: Integrate the game record, annotation and message window
	  with the main window. Add a "New" dialog. Improve GTKFileCommand

	* gtkchequer.c gtkcube.c: Move the tool buttons under the
          movelist/cubeevauation to save width.

	* gtktoolbar.[ch]: Redesign of the toolbar.

	* gnubg.c, backgammon.h: Small changes, for integration.
	
Sun Aug 24 17:18:13 2003  Oystein Johansen  <oystein@gnubg.org>

	* gtkbearoff.c: Make pixmaps of the dice in the pulldown menu.
	* xpm/dice.xpm: New file

Sun Aug 24 11:05:13 2003  Joern Thyssen  <jth@gnubg.org>

	* set.c (SetSkillThreshold): allow setting threshold to zero.
	(suggested by Michael Depreli)

Sat Aug 23 17:31:30 Jim Segrave <jes@jes-2.demon.nl>

	* backgammon.h, gnubg.c add dicerolls nnn command to output list
	  of rolls to stdout.
	